[package]
name = "order_demo_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3"
mysql_async_wasi = "0.31"
hyper_wasi = { path = "./local_deps/hyper", features = ["full"] }
tokio_wasi = { path = "./local_deps/tokio/tokio", features = ["full"] }

[patch.crates-io]
tokio-util_wasi = { path = "./local_deps/tokio/tokio-util" }
h2_wasi = { path = "./local_deps/h2" }
hyper_wasi = { path = "./local_deps/hyper" }
tokio_wasi = { path = "./local_deps/tokio/tokio" }